# eta-hsm

./: .gitignore  LICENSE  README.md
.github/workflows/: linux.yml
cpp/: .clang-format  AutoLoggedStateMachine.cpp  AutoLoggedStateMachine.hpp  CMakeLists.txt  Hsm-inl.hpp  Hsm.cpp  Hsm.hpp  HsmMacros.hpp  HsmMacrosImpl.hpp  README.md
cpp/catch_tests/: hsm_test.cpp
cpp/cmake/: EtaHsmConfig.cmake
cpp/examples/: CMakeLists.txt
cpp/examples/canonical/: CMakeLists.txt  Canonical.cpp  Canonical.hpp
cpp/examples/canonical/tests/: CMakeLists.txt  canonical_test.cpp
cpp/examples/cd_player/: CDPlayer.cpp  CDPlayer.hpp  CMakeLists.txt  CdPlayer-hsm.hpp  CdPlayer-inl.hpp  main.cpp
cpp/examples/cd_player/tests/: CMakeLists.txt  cd_player_test.cpp
cpp/examples/cd_player_orig/: CMakeLists.txt
cpp/examples/controller/: CMakeLists.txt  ExampleControl-PlantUML.txt  ExampleControl-hsm.hpp  ExampleControl-inl.hpp  ExampleControl.cpp  ExampleControl.hpp
cpp/examples/controller/tests/: CMakeLists.txt  example_control_test.cpp
cpp/macros/: HsmMacros.hpp  HsmMacrosImpl.hpp
cpp/macros/catch_tests/: update_control_hsm_catch_test.cpp
cpp/macros/example/: CMakeLists.txt  UpdateControlHsm-hsm.hpp  UpdateControlHsm-inl.hpp  UpdateControlHsm.cpp  UpdateControlHsm.hpp
cpp/macros/tests/: CMakeLists.txt  update_control_hsm_test.cpp
cpp/tests/: CDPlayer.cpp  CMakeLists.txt  Canonical.cpp  Canonical.hpp  ExampleControl-hsm.hpp  ExampleControl-inl.hpp  TestLog.hpp  UpdateControlHsm-hsm.hpp  UpdateControlHsm-inl.hpp  canonical_test.cpp  cd_player_test.cpp  example_control_test.cpp  hello_test.cpp  update_control_hsm_test.cpp
cpp/utils/: CMakeLists.txt  EventBucket.cpp  EventBucket.hpp  FakeClock.hpp  TestLog.hpp  TimeTracker.cpp  TimeTracker.hpp  Timer.cpp  Timer.hpp
cpp/utils/catch_tests/: CMakeLists.txt  event_bucket_test.cpp  time_tracker_tests.cpp  timer_test.cpp
cpp/utils/tests/: CMakeLists.txt  event_bucket_test.cpp  time_tracker_test.cpp  timer_test.cpp
python/: parser.py
python/testing/: ExampleControl-Alive.txt  ExampleControl-Dead.txt  ExampleControl-NoGuards.txt  ExampleControl-NoGuardsOrActions.txt
